--- a/src/login.html
+++ b/src/login.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="nav">
-        <div><img src="./images/logo-icon.png" alt=""></div>
+        <div><a href="./index.html"><img src="./images/logo-icon.png" alt=""></a></div>
     </div>
     <div class="main">
         <div class="w">
