--- a/src/reg.html
+++ b/src/reg.html
@@ -14,15 +14,15 @@
 <body>
     <div class="nav">
         <div class="logo">
-            <img src="./images/logo-icon.png" alt="">
-            <img src="./images/slogan.png" alt="">
+            <a href="./login.html"><img src="./images/logo-icon.png" alt="">
+                <img src="./images/slogan.png" alt=""></a>
         </div>
     </div>
     <div class="main">
         <h5>注册万表会员</h5>
         <div class="container">
             <form>
-                <p><em class="name"></em><input type="text" name="uname" placeholder="请输入用户名"><i></i></p>
+                <p><em class="name"></em><input type="text" name="uname" placeholder="请输入用户名"><i></i><b></b></p>
                 <p><em class="pwd"></em><input type="password" name="upwd1" placeholder="请设置密码"><span
                         class="eye"></span><i></i></p>
                 <p><em class="pwd"></em><input type="password" name="upwd2" placeholder="请再次输入密码"><span
