--- a/src/index.html
+++ b/src/index.html
@@ -1889,7 +1889,7 @@
                     <p>瑞士爱宝时</p>
                     <p>Emotion情感系列自动机械男表</p>
                 </a>
-                <a href="javascript:void(0)">
+                <a href="./goods2.html">
                     <div class="img">
                         <img src="./images/guess3.jpg" alt="">
                         <div class="yaofeng">
