第七天的代码

--- a/src/address.html
+++ b/src/address.html
@@ -169,7 +169,7 @@
             <span class="fl total_price">￥
                 <span>25220</span>
             </span>
-            <a href="./pay.html">
+            <a class="tijiao">
                 <div class="fl submit_btn">
                     提交订单
                 </div>
