--- a/src/goods.html
+++ b/src/goods.html
@@ -158,7 +158,7 @@
                     <div class="price">
                         <div class="jg">
                             <span>市场价</span>
-                            <b>￥<i>343000</i></b>
+                            <b>￥<i>3430</i></b>
                         </div>
                         <div class="lq">
                             <span>领券</span>
@@ -195,7 +195,7 @@
                         </div>
                     </div>
                     <div class="button">
-                        <a href="javascript:void(0)">立即购买</a>
+                        <a>立即购买</a>
                         <b class="btn">加入购物车</b>
                         <p><img src="./images/detail_qrcode.png" alt="">
                             <i>领取优惠</i>
