--- a/src/goods2.html
+++ b/src/goods2.html
@@ -196,7 +196,7 @@
                         </div>
                     </div>
                     <div class="button">
-                        <a href="javascript:void(0)">立即购买</a>
+                        <a>立即购买</a>
                         <b class="btn">加入购物车</b>
                         <p><img src="./images/detail_qrcode.png" alt="">
                             <i>领取优惠</i>
